# werewolf

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  claude.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: ai_agents_design.md  protocol_v1.md  werewolf_business_requirement_document.md
orchestrator/: README.md  __init__.py  __main__.py  brain.py  cloud.py  engine.py  llm.py  recorder.py  runner.py
orchestrator/tests/: test_brain.py  test_cloud_llm.py  test_e2e.py
src/app/: main.cpp
src/core/: board.cpp  board.h  enums.h  game_state.cpp  game_state.h  messages.h  player.h
src/core/abilities/: ability.h  role_abilities.cpp  role_abilities.h
src/core/roles/: role.cpp  role.h
src/flow/: game.cpp  game.h  last_words.h  paidao.cpp  paidao.h  settlement.cpp  settlement.h  speech_order.h  transcript.h  win_condition.cpp  win_condition.h
src/io/: bot_channel.cpp  bot_channel.h  console_decision_provider.cpp  console_decision_provider.h  decision_provider.h  event_sink.h  json_decision_provider.cpp  json_decision_provider.h  json_util.h  pass_and_play_decision_provider.cpp  pass_and_play_decision_provider.h  player_channel.h  routing_decision_provider.cpp  routing_decision_provider.h  scripted_channel.h  scripted_decision_provider.h
tests/: board12_test.cpp  console_test.cpp  core_test.cpp  flow_test.cpp  json_protocol_test.cpp  judge_test.cpp  pass_and_play_test.cpp  psychic_mechanic_test.cpp  roles_test.cpp  routing_test.cpp  rules_m13_test.cpp  sandbox_test.cpp  sheriff_test.cpp  speech_log_test.cpp
